--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.stranger-springs</groupId>
-    <artifactId>zpr</artifactId>
+    <groupId>com.stranger-springs.zpr</groupId>
+    <artifactId>client2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>zpr</name>
-    <description>Demo project for Spring Boot</description>
+    <name>client2</name>
+    <description>Client</description>
 
     <properties>
         <java.version>1.8</java.version>
