--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "lodash": "^4.17.13"
   },
   "scripts": {
     "start": "react-scripts start",
