--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = validate
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+app.api.url=http://127.0.0.1:8082
+
+server.port=9090
