--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -8,6 +8,23 @@ spring.jpa.hibernate.ddl-auto = validate
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-app.api.url=http://127.0.0.1:8082
-
 server.port=9090
+
+app.apiurl=http://127.0.0.1:9082
+
+app.currencies[0].name=bitcoin
+app.currencies[0].endpoint=/currency/bitcoin
+app.currencies[0].tableName=zpr.bitcoin
+
+app.currencies[1].name=ethernum
+app.currencies[1].endpoint=/currency/ethernum
+app.currencies[1].tableName=zpr.ethernum
+
+app.currencies[2].name=litecoin
+app.currencies[2].endpoint=/currency/litecoin
+app.currencies[2].tableName=zpr.ethernum
+
+app.currencies[3].name=zcash
+app.currencies[3].endpoint=/currency/zcash
+app.currencies[3].tableName=zpr.ethernum
+
