--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "lodash": "^4.17.13",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
