--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.initialization-mode=always
+
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
