Client packages structure refactor

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -5,28 +5,23 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.initialization-mode=always
-
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-server.port=9090
+server.port=8080
 
+#defined for local purpose (set as environment variable to change api path)
 app.apiurl=http://127.0.0.1:9082
 
 app.currencies[0].name=bitcoin
 app.currencies[0].endpoint=/currency/bitcoin
-app.currencies[0].tableName=zpr.bitcoin
 
 app.currencies[1].name=ethernum
 app.currencies[1].endpoint=/currency/ethernum
-app.currencies[1].tableName=zpr.ethernum
 
 app.currencies[2].name=litecoin
 app.currencies[2].endpoint=/currency/litecoin
-app.currencies[2].tableName=zpr.ethernum
 
 app.currencies[3].name=zcash
 app.currencies[3].endpoint=/currency/zcash
-app.currencies[3].tableName=zpr.ethernum
 
